--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson'	// 구글 로그인
 	
 	// https://mvnrepository.com/artifact/org.postgresql/postgresql
-	// implementation 'org.postgresql:postgresql:42.6.0'
+	 implementation 'org.postgresql:postgresql:42.6.0'
 	
 	
 }
