--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ server.servlet.context-path=/
 server.servlet.encoding.charset=UTF-8
 
 # DB
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=final
-spring.datasource.password=1234
-
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://svc.sel5.cloudtype.app:31170/finalpro
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 #spring.datasource.username=final
 #spring.datasource.password=1234
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://svc.sel5.cloudtype.app:32549/ssurveyDB
+spring.datasource.username=root
+spring.datasource.password=1234
 
 # JPA
 spring.jpa.properties.hibernate.show_sql=true
