팀플 프론트 배포 url 내 걸로 바뀜

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.servlet.encoding.charset=UTF-8
 #spring.datasource.password=1234
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://svc.sel5.cloudtype.app:32549/ssurveyDB
+spring.datasource.url=jdbc:postgresql://svc.sel5.cloudtype.app:30458/test
 spring.datasource.username=root
 spring.datasource.password=1234
 
